--- a/packages/orion/src/Filter/filter.css
+++ b/packages/orion/src/Filter/filter.css
@@ -31,7 +31,7 @@
 }
 
 .ui.popup.filter .filter-content {
-  @apply p-8;
+  @apply p-8 pb-24;
 }
 
 .ui.popup.filter .filter-buttons {
